--- a/usp.theme.css
+++ b/usp.theme.css
@@ -14,7 +14,7 @@
 
 
 :root {
-  --background: url("https://so1ta.github.io/Images/USP.jpg");
+  --background: url("[Imgur](https://imgur.com/vTgNY1d)");
   --font:                       "Inter";
   --transparencyalpha:          0.5;
   --transparencycolor:          0,0,0;
